--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^6.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "stripe": "^20.3.1"
+    "stripe": "^20.3.1",
+    "vercel": "^50.23.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
